AX: cannot use accessibility to focus an element in a cross-origin iframe https://bugs.webkit.org/show_bug.cgi?id=266507 rdar://118405840

Reviewed by Tyler Wilcock.

If you use VoiceOver to navigate to a text field inside a cross-origin iframe, the field doesn't automatically get keyboard focus. The issue is that Element::focus checks whether the frame has had previous user interaction. To fix it, we can just mark the accessibility focus request as a user gesture.

The test needs to be in http/ because otherwise it's not possible to create a cross-origin iframe.

* LayoutTests/http/tests/accessibility/focus-text-field-in-iframe-expected.txt: Added.
* LayoutTests/http/tests/accessibility/focus-text-field-in-iframe.html: Added.
* LayoutTests/http/tests/accessibility/resources/text-field-frame.html: Added.
* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::setFocused):

Canonical link: https://commits.webkit.org/272428@main